# PeekImage

./: CLAUDE.md  Cargo.toml  README.md
src/: exr_decode.rs  file_ops.rs  image_decode.rs  ipc.rs  main.rs  state.rs  window_state.rs
src/frontend/: app.js  index.html  renderer.js  style.css  viewer.js
