[package]
name = "peekimage"
version = "1.1.0"
edition = "2021"

[dependencies]
wry = "0.49"
tao = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "ico", "tiff", "tga", "pnm", "qoi", "hdr", "exr"] }
exr = "1"
arboard = "3"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "none"
